@@ -475,6 +475,7 @@ fun buf fmtty -> match fmtty with
   | Bool_ty rest      -> buffer_add_string buf "%B";  bprint_fmtty buf rest;
   | Alpha_ty rest     -> buffer_add_string buf "%a";  bprint_fmtty buf rest;
   | Theta_ty rest     -> buffer_add_string buf "%t";  bprint_fmtty buf rest;
+  | Any_ty rest       -> buffer_add_string buf "%?";  bprint_fmtty buf rest;
   | Reader_ty rest    -> buffer_add_string buf "%r";  bprint_fmtty buf rest;
 
   | Ignored_reader_ty rest ->
@@ -491,6 +492,12 @@ fun buf fmtty -> match fmtty with
   | End_of_fmtty -> ()
 
 (***)
+
+let rec int_of_custom_arity : type a b c d .
+  (a, b, c, d) custom_arity -> int =
+  function
+  | Custom_zero -> 0
+  | Custom_succ x -> 1 + int_of_custom_arity x
 
 (* Print a complete format in a buffer. *)
 let bprint_fmt buf fmt =
@@ -537,6 +544,12 @@ let bprint_fmt buf fmt =
     | Theta rest ->
       buffer_add_char buf '%'; bprint_ignored_flag buf ign_flag;
       buffer_add_char buf 't'; fmtiter rest false;
+    | Custom (arity, _, rest) ->
+      for _i = 1 to int_of_custom_arity arity do
+        buffer_add_char buf '%'; bprint_ignored_flag buf ign_flag;
+        buffer_add_char buf '?';
+      done;
+      fmtiter rest false;
     | Reader rest ->
       buffer_add_char buf '%'; bprint_ignored_flag buf ign_flag;
       buffer_add_char buf 'r'; fmtiter rest false;
@@ -623,6 +636,7 @@ let rec symm : type a1 b1 c1 d1 e1 f1 a2 b2 c2 d2 e2 f2 .
   | String_ty rest -> String_ty (symm rest)
   | Theta_ty rest -> Theta_ty (symm rest)
   | Alpha_ty rest -> Alpha_ty (symm rest)
+  | Any_ty rest -> Any_ty (symm rest)
   | Reader_ty rest -> Reader_ty (symm rest)
   | Ignored_reader_ty rest -> Ignored_reader_ty (symm rest)
   | Format_arg_ty (ty, rest) ->
@@ -691,6 +705,11 @@ let rec fmtty_rel_det : type a1 b c d1 e1 f1 a2 d2 e2 f2 .
     (fun Refl -> let Refl = af Refl in Refl),
     ed, de
   | Alpha_ty rest ->
+    let fa, af, ed, de = fmtty_rel_det rest in
+    (fun Refl -> let Refl = fa Refl in Refl),
+    (fun Refl -> let Refl = af Refl in Refl),
+    ed, de
+  | Any_ty rest ->
     let fa, af, ed, de = fmtty_rel_det rest in
     (fun Refl -> let Refl = fa Refl in Refl),
     (fun Refl -> let Refl = af Refl in Refl),
@@ -765,6 +784,10 @@ and trans : type
   | Theta_ty _, _ -> assert false
   | _, Theta_ty _ -> assert false
 
+  | Any_ty rest1, Any_ty rest2 -> Any_ty (trans rest1 rest2)
+  | Any_ty _, _ -> assert false
+  | _, Any_ty _ -> assert false
+
   | Reader_ty rest1, Reader_ty rest2 -> Reader_ty (trans rest1 rest2)
   | Reader_ty _, _ -> assert false
   | _, Reader_ty _ -> assert false
@@ -835,6 +858,7 @@ fun fmtty -> match fmtty with
   | Bool rest                  -> Bool_ty (fmtty_of_fmt rest)
   | Alpha rest                 -> Alpha_ty (fmtty_of_fmt rest)
   | Theta rest                 -> Theta_ty (fmtty_of_fmt rest)
+  | Custom (arity, _, rest)    -> fmtty_of_custom arity (fmtty_of_fmt rest)
   | Reader rest                -> Reader_ty (fmtty_of_fmt rest)
 
   | Format_arg (_, ty, rest) ->
@@ -855,6 +879,13 @@ fun fmtty -> match fmtty with
     concat_fmtty (fmtty_of_formatting_gen fmting_gen) (fmtty_of_fmt rest)
 
   | End_of_format              -> End_of_fmtty
+
+and fmtty_of_custom : type x y a b c d e f .
+  (c, a, x, y) custom_arity -> (a, b, c, d, e, f) fmtty ->
+  (y, b, c, d, e, f) fmtty =
+fun arity fmtty -> match arity with
+  | Custom_zero -> fmtty
+  | Custom_succ arity -> Any_ty (fmtty_of_custom arity fmtty)
 
 (* Extract the fmtty of an ignored parameter followed by the rest of
    the format. *)
@@ -1404,6 +1435,8 @@ fun k o acc fmt -> match fmt with
     fun f x -> make_printf k o (Acc_delay (acc, fun o -> f o x)) rest
   | Theta rest ->
     fun f -> make_printf k o (Acc_delay (acc, f)) rest
+  | Custom (arity, f, rest) ->
+    make_custom k o acc rest arity f
   | Reader _ ->
     (* This case is impossible, by typing of formats. *)
     (* Indeed, since printf and co. take a format4 as argument, the 'd and 'e
@@ -1503,6 +1536,7 @@ fun k o acc fmtty fmt -> match fmtty with
   | Bool_ty rest            -> fun _ -> make_from_fmtty k o acc rest fmt
   | Alpha_ty rest           -> fun _ _ -> make_from_fmtty k o acc rest fmt
   | Theta_ty rest           -> fun _ -> make_from_fmtty k o acc rest fmt
+  | Any_ty rest             -> fun _ -> make_from_fmtty k o acc rest fmt
   | Reader_ty _             -> assert false
   | Ignored_reader_ty _     -> assert false
   | Format_arg_ty (_, rest) -> fun _ -> make_from_fmtty k o acc rest fmt
@@ -1628,6 +1662,16 @@ and make_float_padding_precision : type x y a b c d e f .
     fun w p x ->
       let str = fix_padding padty w (convert_float fconv p x) in
       make_printf k o (Acc_data_string (acc, str)) fmt
+
+and make_custom : type x y a b c d e f .
+  (b -> (b, c) acc -> f) -> b -> (b, c) acc ->
+  (a, b, c, d, e, f) fmt ->
+  (c, a, x, y) custom_arity -> (b -> x) -> y =
+  fun k o acc rest arity f -> match arity with
+  | Custom_zero -> make_printf k o (Acc_delay (acc, f)) rest
+  | Custom_succ arity ->
+    fun x ->
+      make_custom k o acc rest arity (fun o -> f o x)
 
 (******************************************************************************)
                           (* Continuations for make_printf *)
