@@ -172,6 +172,8 @@ Feature wishes:
   (Christophe Troestler, review by Damien Doligez)
 - GPR#157: store the path of cmos inside debug section at link time
   (Hugo Heuzard, review by Damien Doligez)
+- PR#6452, GPR#140: add internal suport for custom printing formats
+  (Jérémie Dimino)
 
 OCaml 4.02.1:
 -------------
